Syntaxe/Test/Invalide/tokens_caracteres_speciaux.deca
// Description:
//    tests de l'ensemble des caractères spéciaux.
//    test_lex ne doit pas donner d'erreur
//    contrairement à test_synt. 
// Resultats:
//    Ligne 12 : Erreur de syntaxe.
//    
//
// Historique:
//    crée le 08/01/2012

<
>
=
+
-
*
/
%
.
,
(
)
{
}
!
;
==
!=
>=
<=
&&
||
